--- a/page_about_us.html
+++ b/page_about_us.html
@@ -32,7 +32,7 @@
 				<div class="text__container">
 					<div class="text__head">
 						<h3 class="h3">Телефон:</h3>
-						<h3 class="h3">+7 (937) 250 14-04</h3>
+						<a href="tel:+79372501404" class="h3 number__main">+7 (937) 250 14-04</a>
 						<br>
 						<h3 class="h3">Адрес:</h3>
 						<h3 class="h3">Россия, Саратов, ул. Радищева.</h3>
